use shell script  for mono+nunit3-console

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -189,7 +189,7 @@ def runTestsRemote(device)
 {
     if (Include_Tags == '' && Exclude_Tags == ''){
         print "Not tag to include or exclude. Running all tests"
-        bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono /Users/uimcm/NUnit.Console-3.8.0/nunit3-console.exe /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --result:${device}TestResults.xml;format=nunit2"
+        bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Users/uimcm/NUnit.Console-3.8.0/nunit /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --result:${device}TestResults.xml;format=nunit2"
     }
     else
     {
@@ -227,7 +227,7 @@ def runTestsRemote(device)
       print "Including tags:  ${Include_Tags}"
 			print "Excluding tags:  ${Exclude_Tags}"
 
-			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono /Users/uimcm/NUnit.Console-3.8.0/nunit3-console.exe /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -where \"${include}${and}${exclude}\" --result:${device}TestResults.xml;format=nunit2"
+			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Users/uimcm/NUnit.Console-3.8.0/nunit /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -where \"${include}${and}${exclude}\" --result:${device}TestResults.xml;format=nunit2"
 		}
 }
 
