--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -17,8 +17,7 @@ msbuild = ''
 solutionName = "MenuCycle.Automation.sln"
 projectPath = "MenuCycle.Tests"
 projectName = "MenuCycle.Tests.csproj"
-
-def isRemote
+isRemote = false
 
 node('IE1UIBLD03') {
 	stage ('Get Source Code') {
@@ -38,7 +37,13 @@ node('IE1UIBLD03') {
 	msbuild = tool 'v15'
 
 	def jobName = "${env.JOB_NAME}"
-  isRemote = jobName.contains("Remote")
+
+	if (jobName.contains("Remote"))
+ 	{
+		isRemote = true
+		print "Remote\" keyword found. Tests will execute on remote machine.."
+	}
+
 	//List of App.config browser transformations to be run by Jenkins
 	def device = ''
 
