--- a/MenuCycle.Tests/App.SamsungTabA.config
+++ b/MenuCycle.Tests/App.SamsungTabA.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_com.fourth.marketplace" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="http://10.0.70.8:4545/wd/hub/" driverDirectory="" xdt:Transform="Replace">
+  <fourth driverType="Android" serverUrl="http://localhost:4545/wd/hub/" driverDirectory="" xdt:Transform="Replace">
     <reporting keepScreenshot="false" takeScreenshotOnError="false" />
 	<timeout driverCommands="00:03:00"/>
     <capabilities>
