- move } to correct place

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -15,7 +15,7 @@ solutionName = "MenuCycle.Automation.sln"
 projectPath = "MenuCycle.Tests"
 projectName = "MenuCycle.Tests.csproj"
 remotePort = 11864
-remotePath = "~/FromJenkins/${env.JOB_NAME}.split('/').last()/${projectPath}"
+remotePath = "~/FromJenkins/${env.JOB_NAME.split('/').last()}/${projectPath}"
 isRemote = false // Don't change manually
 
 
