- add default port

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -3,7 +3,7 @@ properties([
 	parameters([
 		string(name: 'Include_Tags', defaultValue: '', description: 'The test tags to run. Empty if all.'),
 		string(name: 'Exclude_Tags', defaultValue: '', description: 'The test tags to exclude.'),
-		string(name: 'Remote_Port', defaultValue: '', description: 'Only needed for Remote jobs.'),
+		string(name: 'Remote_Port', defaultValue: '11864', description: 'Only needed for Remote jobs.'),
 	])
 ])
 
