--- a/MenuCycle.Tests/App.Nexus7.config
+++ b/MenuCycle.Tests/App.Nexus7.config
@@ -3,11 +3,11 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_com.fourth.marketplace" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="http://10.0.70.8:4545/wd/hub/" driverDirectory="" xdt:Transform="Replace">
+  <fourth driverType="Android" serverUrl="http://localhost:4545/wd/hub/" driverDirectory="" xdt:Transform="Replace">
     <reporting keepScreenshot="false" takeScreenshotOnError="false" />
 	<timeout driverCommands="00:03:00"/>
     <capabilities>
-      <add key="platformVersion" value="5.1.1"/>
+      <add key="platformVersion" value="6.0.1"/>
       <add key="clearSystemFiles" value="true"/>
       <add key="deviceName" value="Nexus 7"/>
       <add key="appPackage" value="com.fourth.marketplace.qa"/>
