--- a/MenuCycle.Tests/App.Nexus7.config
+++ b/MenuCycle.Tests/App.Nexus7.config
@@ -17,6 +17,7 @@
       <add key="browserName" value="Nexus7"/>
       <add key="version" value="5.1.1"/>
       <add key="platform" value="Android"/>
+      <add key="chromeDriverPort" value="9667"/>
     </capabilities>
   </fourth>
 </configuration>
