--- a/MenuCycle.Tests/App.SamsungTabA.config
+++ b/MenuCycle.Tests/App.SamsungTabA.config
@@ -17,6 +17,7 @@
       <add key="browserName" value="GalaxyTabA"/>
       <add key="version" value="6.0.1"/>
       <add key="platform" value="Android"/>
+      <add key="chromeDriverPort" value="9666"/>
     </capabilities>
   </fourth>
 </configuration>
