--- a/MenuCycle.Tests/App.Nexus7.config
+++ b/MenuCycle.Tests/App.Nexus7.config
@@ -18,6 +18,7 @@
       <add key="version" value="5.1.1"/>
       <add key="platform" value="Android"/>
       <add key="chromeDriverPort" value="9667"/>
+      <add key="systemPort" value="8201"/>
     </capabilities>
   </fourth>
 </configuration>
