--- a/MenuCycle.Tests/App.SamsungTabA.config
+++ b/MenuCycle.Tests/App.SamsungTabA.config
@@ -18,6 +18,7 @@
       <add key="version" value="6.0.1"/>
       <add key="platform" value="Android"/>
       <add key="chromeDriverPort" value="9666"/>
+      <add key="systemPort" value="8202"/>
     </capabilities>
   </fourth>
 </configuration>
