- pass empty string when parameter not passed

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -7,6 +7,10 @@ if (cronSchedule.count > 0)
 	cronSchedule = cronSchedule[0].replaceAll("(?<=\\D)(?=\\d)"," ");
 	cronSchedule += " * * *"
 }
+else
+{
+	cronSchedule = ''
+}
 
 properties([
 	parameters([
